--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "http-proxy-middleware": "^3.0.0",
     "next": "14.2.2",
     "node-fetch": "^3.3.2",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.2",
+    "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
